<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_browser">Browser</string>
    <string name="menu_calc">Calculator</string>
    <string name="menu_player">Player</string>
    <string name="menu_sensor">Sensors</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_audio">Recorder</string>
    <string name="menu_story">Stories</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_network_data">Network Data</string>
    <string name="menu_auth">Authorization</string>
    <string name="menu_livedata">Get network state</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_maps">Maps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>